# mpsse-gui

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  layout.glade  style.css
src/: main.c  mpsse.c  mpsse.h
